
    * Calculate remote path relative to the shared medium in _SmartClient.  This
      is related to the problem in bug #124089.  (Andrew Bennetts)

    * Cleanly handle connection errors in smart protocol version two, the same
      way as they are handled by version one.  (Andrew Bennetts)

    * Clearer error when ``version-info --custom`` is used without
      ``--template`` (Lukáš Lalinský)
      
    * List possible values for BZR_SSH environment variable in env-variables
      help topic. (Alexander Belchenko, #181842)

   * New methods ``push_log_file`` and ``pop_log_file`` to intercept messages:
     popping the log redirection now precisely restores the previous state,
     which makes it easier to use bzr log output from other programs.
     TestCaseInTempDir no longer depends on a log redirection being established
     by the test framework, which lets bzr tests cleanly run from a normal
     unittest runner.
     (#124153, #124849, Martin Pool, Jonathan Lange)

    * ``pull --quiet`` is now more quiet, in particular a message is no longer
      printed when the remembered pull location is used. (James Westby,
      #185907)

    * ``reconfigure`` can safely be interrupted while fetching.
      (Aaron Bentley, #179316)

    * ``reconfigure`` preserves tags when converting to and from lightweight
      checkouts.  (Aaron Bentley, #182040)

    * Stop polluting /tmp when running selftest.
      (Vincent Ladeuil, #123623)

    * Switch from NFKC => NFC for normalization checks. NFC allows a few
      more characters which should be considered valid.
      (John Arbash Meinel, #185458)

    * The launchpad plugin now uses the ``edge`` xmlrpc server to avoid
      interacting badly with a bug on the launchpad side. (Robert Collins)

    * Unknown hostnames when connecting to a ``bzr://`` URL no longer cause
      tracebacks.  (Andrew Bennetts, #182849)

  API BREAKS:

    * Classes implementing Merge types like Merge3Merger must now accept (and